[gd_scene load_steps=6 format=3 uid="uid://sp2m733e1h2k"]

[ext_resource type="Script" path="res://Utility/effect_animation.gd" id="1_iqhff"]

[sub_resource type="SphereShape3D" id="SphereShape3D_40nj0"]

[sub_resource type="Animation" id="Animation_aibxh"]
resource_name = "start"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"anim_plays"
}, {
"args": [],
"method": &"follow_up_set"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.06, 0, 0)]
}

[sub_resource type="Animation" id="Animation_nqes1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3e1pe"]
_data = {
"RESET": SubResource("Animation_nqes1"),
"start": SubResource("Animation_aibxh")
}

[node name="Dodge_effect" type="Node3D"]
script = ExtResource("1_iqhff")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_40nj0")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.68252)
cull_mask = 1

[node name="ShiftJoint" type="Node3D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3e1pe")
}

[connection signal="area_shape_entered" from="Area3D" to="." method="_on_area_3d_area_shape_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
