[gd_scene load_steps=2 format=3 uid="uid://cn5u12rvrjcyp"]

[ext_resource type="Script" path="res://Utility/effect_animation.gd" id="1_fvk0m"]

[node name="EffectAnimation" type="Node3D"]
script = ExtResource("1_fvk0m")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.68252)
cull_mask = 1

[node name="ShiftJoint" type="Node3D" parent="."]

[connection signal="area_shape_entered" from="Area3D" to="." method="_on_area_3d_area_shape_entered"]
